--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.24.0",
     "gh-pages": "^4.0.0",
     "pinia": "^2.0.14",
     "vue": "^3.2.37",
